--- a/visual_data_story.html
+++ b/visual_data_story.html
@@ -393,10 +393,14 @@ colored by if anyone spoke to me</div>
 </div>
 <p>Here we have a <strong>bar graph</strong> of the days of the weeks I
 go to the gym! WOW! Not too many Thursdays or Fridays, huh? I’m going
-pretty hard out on the Mondays and Sundays though! I’ve also colored the
-bars by whether anyone spoke to me at the gym or not. If you focus on
-each individual bar, you see a good visualization of the ratios for each
-day.</p>
+pretty consistently on the Mondays and Sundays though! I’ve also colored
+the bars by whether anyone spoke to me at the gym or not. If you focus
+on each individual bar, you see a good visualization of the
+<em>ratios</em> for each day.</p>
+<p>I have an app called “hevy” that I use to track my workouts and
+actually Thursday and Fridays are my rest days, likely due to the fact
+that I have lectures early in the morning on those days. So this graph
+is pretty accurate.</p>
 </div>
 <div id="whos-running-indoors-on-a-sunny-day" class="section level2">
 <h2>Who’s running indoors on a Sunny day?</h2>
@@ -407,12 +411,13 @@ machines, seperated by whether</div>
 </div>
 <p>What pretty <strong>boxplots</strong>! Each box plot shows the number
 of people on cardio machines, seperated by weather. There are also
-individual dots that represent data points. The plots are just
+<em>individual dots</em> that represent data points. The plots are just
 see-through enough that you cansee them! It seems like there are less
 data points for windy and foggy, and more for showers and rainy. I’ve
-also ordered the boxplots from lowest to highest median number of people
-on cardio machines! So we can easily see that windy and partly cloudy
-have the lowest median amount and rainy and sunny have the highest!</p>
+also ordered the boxplots from <em>lowest to highest</em> median number
+of people on cardio machines! So we can easily see that windy and partly
+cloudy have the lowest median amount and rainy and sunny have the
+highest!</p>
 </div>
 <div id="more-people-in-gym-more-people-to-talk-to-me" class="section level2">
 <h2>More People in Gym = More People to talk to me?</h2>
@@ -421,13 +426,15 @@ have the lowest median amount and rainy and sunny have the highest!</p>
 <div class="figcaption">A density plot of number of people on cardio
 machines, seperated by if people talked to me or not</div>
 </div>
-<p>Ooh! So smooth! Here we have a <strong>density plot</strong> of the
-number of people on cardio machines, showing which numbers are more
-common than others by the seperation. The plots are seperated by if
+<p>Ooh! So <em>smooth</em>! Here we have a <strong>density plot</strong>
+of the number of people on cardio machines, showing which numbers are
+more common than others by the seperation. The plots are seperated by if
 someone spoke to me or not. Seems that when people talk to me, the peak
 of number of people on cardio machines is about 18 and if they don’t
 it’s about 14. Maybe I should start going to the gym more on windy days
 when I don’t want anyone to speak to me!</p>
+<p><a href="https://nicole8312.github.io/stats220/visual_data_story.html">Github
+Link</a></p>
 </div>
 
 
